<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F48236"
    tools:context=".HomePage">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:contentDescription="@string/todo1"
        android:src="@drawable/gfg"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textSize="36sp"
        android:textColor="#FFFFFF"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/logo"
        android:layout_marginTop="10dp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="85dp"
        android:layout_below="@id/logo"
        android:background="@drawable/button_save_background"
        android:text="@string/save_document"
        android:textSize="16sp"
        android:textAlignment="center"/>

    <Button
        android:id="@+id/btnView"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_below="@id/btnSave"
        android:background="@drawable/button_view_background"
        android:text="@string/view_documents"
        android:textSize="16sp"
        android:textAlignment="center"/>
</RelativeLayout>
